--- a/exercises/todelete/Makefile
+++ b/exercises/todelete/Makefile
@@ -7,11 +7,16 @@ all: clean main
 	llvm-objdump-11 -d -s $@ > $@.assembled.dump
 	readelf -a $@ > $@.assembled.readelf.dump
 
-main: main.o
-	ld.lld -m aarch64elf -nostdlib main.o -o main
+%.o: %.c
+	gcc -I./ -O3 -lrt -ansi -pedantic -Wno-unused-result -c $< -o $@
+	llvm-objdump-11 -d -s $@ > $@.assembled.c.dump
+
+main: main.o utils.o
+	ld.lld -m aarch64elf main.o utils.o -o main
 	llvm-objdump-11 -d -s $@ > $@.linked.dump
 	readelf -a $@ > $@.linked.readelf.dump
 
 .PHONY: clean
 clean:
 	rm main *.o *.dump  >/dev/null 2>/dev/null || true
+
